# scg_back

./: .gitignore  alembic.ini  containers.py  database.py  main.py  pyproject.toml  requirements.txt
Model/: keras_model.h5  labels.txt
migrations/: env.py
migrations/versions/: 2025_10_30_1832-1e3698110f97_add_user_table.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: db_utils.py
